hphp/test/zend/good/ext-gd/imagestring_error3.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagestring($image, 'string', 5, 5, 'String', 1);

?>