hphp/test/zend/bad/ext/gd/tests/imagestringup_error4.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagestringup($image, 1, 'string', 5, 'String', 1);

?>